<resources>
    <string name="app_name">Gestor de Aplicaiones</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sales_manager">Sales Manager</string>
    <string name="email">bryque18@gmail.com</string>
    <string name="icon">Icon</string>
    <string name="graphics">Home</string>
    <string name="customers">Customers</string>
    <string name="products">Products</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="customers_fragmen">customers fragmen</string>
    <string name="customers_fragment_tex">customers fragment</string>
</resources>
