<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_graphics"
            android:icon="@drawable/ic_multiline_chart_black_24dp"
            android:title="@string/graphics" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
